# 2024-proteomics-preprocessing

./: .gitignore  README.md  pyproject.toml
scripts/: convert_uniprot_xml_to_duckdb.py  extract_uniprot_entries_subset.py  merge_peptide_tables.py
tests/data/: peptides_1.tsv  peptides_2.tsv
